2014-03-11  Josh Stone  <jistone@redhat.com>

	* dwfl_module_getdwarf.c (open_elf): Only explicitly set
	mod->e_type when processing the main ELF file.

2014-03-04  Mark Wielaard  <mjw@redhat.com>

	* libdwflP.h (struct __libdwfl_pid_arg): Moved here and renamed from
	linux-pid-attach.c (struct pid_arg).
	(__libdwfl_get_pid_arg): New internal function declaration.
	(__libdwfl_ptrace_attach): Likewise.
	(__libdwfl_ptrace_detach): Likewise.
	* dwfl_frame.c (dwfl_attach_state): Add "(deleted)" files to the
	special exception modules that cannot be checked at this point.
	* linux-pid-attach.c (struct pid_arg): Moved to libdwflP.h
	(ptrace_attach): Renamed to...
	(__libdwfl_ptrace_attach): New internal function.
	(__libdwfl_ptrace_detach): Likewise. Extracted from ...
	(pid_thread_detach): Call __libdwfl_ptrace_detach now.
	(__libdwfl_get_pid_arg): New internal function.
	* linux-proc-maps.c (dwfl_linux_proc_find_elf): Check if special
	module name contains "(deleted)" and dwfl_pid gives an attached
	pid. If pid is set and try to (re)use ptrace attach state of
	process before reading memory.

2014-03-03  Mark Wielaard  <mjw@redhat.com>

	* elf-from-memory.c (elf_from_remote_memory): Take pagesize as
	argument. Free buffer when detecting bad elf. Check PT_LOAD
	alignment requirements on first handle_segment pass. Calculate
	loadbase, start and end of segment using pagesize, not p_align.
	* linux-proc-maps.c (dwfl_linux_proc_find_elf): Provide pagesize
	to elf_from_remote_memory.

2014-02-26  Mark Wielaard  <mjw@redhat.com>

	* linux-proc-maps.c (proc_maps_report): Don't assert on bad input.

2014-02-26  Mark Wielaard  <mjw@redhat.com>

	* elf-from-memory.c (elf_from_remote_memory): Check against p64
	p_type in case ELFCLASS64, not against p32 p_type.

2014-01-17  Petr Machata  <pmachata@redhat.com>

	* relocate.c (relocate_section): Use gelf_fsize instead of relying
	on shdr->sh_entsize.

2014-01-05  Mark Wielaard  <mjw@redhat.com>
